--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -739,7 +739,6 @@
 				overflow: hidden;
 				text-align: center;
 				white-space: nowrap;
-				/* NEW: Added transition for smooth animation */
 				transition: transform 0.2s ease-in-out;
 			}
 
@@ -776,7 +775,6 @@
 					text-indent: 0;
 				}
 
-				/* NEW: Added hover effect for the whole icon link */
 				ul.icons li a:hover {
 					transform: scale(1.15) translateY(-3px);
 				}
@@ -800,7 +798,6 @@
 		-webkit-appearance: none;
 		-ms-appearance: none;
 		appearance: none;
-		/* UPDATED: Added 'transform' to the transition list for smooth animation */
 		-moz-transition: background-color 0.17s ease-in-out, border-color 0.17s ease-in-out, color 0.17s ease-in-out, transform 0.2s ease;
 		-webkit-transition: background-color 0.17s ease-in-out, border-color 0.17s ease-in-out, color 0.17s ease-in-out, transform 0.2s ease;
 		-ms-transition: background-color 0.17s ease-in-out, border-color 0.17s ease-in-out, color 0.17s ease-in-out, transform 0.2s ease;
@@ -826,7 +823,6 @@
 		.button:hover {
 			border-color: #b00;
 			color: #b00 !important;
-			/* NEW: Added transform for the hover animation */
 			transform: translateY(-4px) scale(1.05);
 		}
 
@@ -987,6 +983,9 @@
 
 				#footer .copyright li:first-child {
 					border-left: 0;
+					/* NEW: Added these two lines to remove extra space for perfect centering */
+					margin-left: 0;
+					padding-left: 0;
 				}
 
 /* Wrapper */
